feat: lottie view

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "expo-updates": "~0.25.18",
     "expo-web-browser": "~13.0.3",
     "i18n-js": "4.4.3",
+    "lottie-react": "^2.4.0",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
