--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "expo-build-properties": "^0.12.3",
+    "expo-dev-client": "^4.0.19",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "jest-fetch-mock": "^3.0.3",
