chore: prisma setup

--- a/package.json
+++ b/package.json
@@ -13,13 +13,31 @@
     "fix:deps": "expo install --fix",
     "lint:all": "bun lint && bun lint:i18n",
     "build:web": "expo export --platform web",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "eas:dev:updates": "dotenv -e .env -- eas update --branch development",
+    "eas:preview:android": "dotenv -e .env.production -- eas build --profile preview --platform android",
+    "eas:prod:updates": "dotenv -e .env.production -- eas update --branch production",
+    "eas:prod:updates:ios": "dotenv -e .env.production -- eas update --branch production --platform ios",
+    "eas:prod:updates:android": "dotenv -e .env.production -- eas update --branch production --platform android",
+    "eas:dev:ios": "dotenv -e .env -- eas build --profile development --platform ios",
+    "eas:dev:android": "dotenv -e .env -- eas build --profile development --platform android",
+    "eas:prod:secrets": "eas secret:push --scope project --env-file .env.production",
+    "eas:prod:ios": "dotenv -e .env.production -- eas build --profile production --platform ios",
+    "eas:prod:android": "dotenv -e .env.production -- eas build --profile production --platform android",
+    "eas:prod:android:local": "dotenv -e .env.production -- eas build --profile production --platform android --local",
+    "eas:submit:ios": "dotenv -e .env.production -- eas submit --profile production --platform ios",
+    "eas:submit:android": "dotenv -e .env.production -- eas submit --profile production --platform android",
+    "generate:supabase": "bunx supabase gen types typescript --project-id \"nrywcykpuqhlyaavosms\" --schema public > src/types/supabase.ts",
+    "migrate:dev": "dotenv -e .env -- prisma migrate dev",
+    "migrate:local": "dotenv -e .env -- prisma migrate deploy",
+    "migrate:deploy": "dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@expo/match-media": "^0.4.0",
     "@expo/react-native-action-sheet": "^4.1.0",
+    "@prisma/client": "5.16.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@shopify/flash-list": "1.6.4",
@@ -95,6 +113,7 @@
     "jest-expo": "~51.0.3",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.2",
+    "prisma": "^5.16.1",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
