--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@shopify/flash-list": "1.6.4",
+    "@supabase/supabase-js": "^2.44.2",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
     "dooboo-ui": "^0.2.32",
     "expo": "~51.0.16",
