--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "@prisma/client": "5.16.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@shopify/flash-list": "1.6.4",
     "@supabase/supabase-js": "^2.44.2",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
     "dooboo-ui": "^0.2.32",
-    "expo": "~51.0.16",
+    "expo": "~51.0.17",
+    "expo-apple-authentication": "^6.4.1",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.7",
