--- a/package.json
+++ b/package.json
@@ -13,19 +13,41 @@
     "fix:deps": "expo install --fix",
     "lint:all": "bun lint && bun lint:i18n",
     "build:web": "expo export --platform web",
-    "test": "jest --runInBand"
+    "test": "jest --runInBand",
+    "eas:dev:updates": "dotenv -e .env -- eas update --branch development",
+    "eas:preview:android": "dotenv -e .env.production -- eas build --profile preview --platform android",
+    "eas:prod:updates": "dotenv -e .env.production -- eas update --branch production",
+    "eas:prod:updates:ios": "dotenv -e .env.production -- eas update --branch production --platform ios",
+    "eas:prod:updates:android": "dotenv -e .env.production -- eas update --branch production --platform android",
+    "eas:dev:ios": "dotenv -e .env -- eas build --profile development --platform ios",
+    "eas:dev:android": "dotenv -e .env -- eas build --profile development --platform android",
+    "eas:prod:secrets": "eas secret:push --scope project --env-file .env.production",
+    "eas:prod:ios": "dotenv -e .env.production -- eas build --profile production --platform ios",
+    "eas:prod:android": "dotenv -e .env.production -- eas build --profile production --platform android",
+    "eas:prod:android:local": "dotenv -e .env.production -- eas build --profile production --platform android --local",
+    "eas:submit:ios": "dotenv -e .env.production -- eas submit --profile production --platform ios",
+    "eas:submit:android": "dotenv -e .env.production -- eas submit --profile production --platform android",
+    "generate:supabase": "bunx supabase gen types typescript --project-id \"dnwizkmicoxcnzlfeali\" --schema public > src/types/supabase.ts",
+    "migrate:dev": "dotenv -e .env -- prisma migrate dev",
+    "migrate:local": "dotenv -e .env -- prisma migrate deploy",
+    "migrate:deploy": "dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@expo/match-media": "^0.4.0",
     "@expo/react-native-action-sheet": "^4.1.0",
+    "@prisma/client": "5.16.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@shopify/flash-list": "1.6.4",
+    "@supabase/supabase-js": "^2.44.2",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
     "dooboo-ui": "^0.2.32",
-    "expo": "~51.0.16",
+    "expo": "~51.0.17",
+    "expo-apple-authentication": "^6.4.1",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.7",
@@ -89,10 +111,13 @@
     "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "expo-build-properties": "^0.12.3",
+    "expo-dev-client": "^4.0.19",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.2",
+    "prisma": "^5.16.1",
     "react-test-renderer": "18.2.0",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
