--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint --ext .ts,.tsx,.js,.jsx src app test",
-    "lint:i18n": "eslint --fix --ext .json --format node_modules/eslint-plugin-i18n-json/formatter.js assets/langs/",
     "fix:deps": "expo install --fix",
-    "lint:all": "bun lint && bun lint:i18n",
     "build:web": "expo export --platform web",
     "test": "jest --runInBand",
     "eas:dev:updates": "dotenv -e .env -- eas update --branch development",
@@ -45,7 +43,7 @@
     "@supabase/supabase-js": "^2.44.2",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
-    "dooboo-ui": "^0.2.32",
+    "dooboo-ui": "^0.2.33",
     "expo": "~51.0.17",
     "expo-apple-authentication": "^6.4.1",
     "expo-constants": "~16.0.2",
@@ -66,7 +64,6 @@
     "expo-tracking-transparency": "~4.0.2",
     "expo-updates": "~0.25.18",
     "expo-web-browser": "~13.0.3",
-    "i18n-js": "4.4.3",
     "lottie-react": "^2.4.0",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
@@ -82,6 +79,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.12",
     "react-native-web-lottie": "^1.4.4",
     "react-native-webview": "13.8.6",
@@ -98,7 +96,6 @@
     "@mmomtchev/expo-android-localized-app-name": "^1.0.1",
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.5.1",
-    "@types/i18n-js": "^3.8.9",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.79",
     "@types/recoil": "^0.0.9",
@@ -108,7 +105,6 @@
     "commitlint-plugin-function-rules": "^4.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "expo-build-properties": "^0.12.3",
