--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx src app test",
+    "lint": "bun lint:app && bun lint:i18n",
+    "lint:app": "eslint --ext .ts,.tsx,.js,.jsx src app",
+    "lint:i18n": "eslint --fix --ext .json --format node_modules/eslint-plugin-i18n-json/formatter.js assets/langs",
     "fix:deps": "expo install --fix",
     "build:web": "expo export --platform web",
     "test": "jest --runInBand",
@@ -92,7 +94,6 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@dooboo/eslint-config-react-native": "^1.4.3",
     "@emotion/babel-plugin": "^11.11.0",
     "@mmomtchev/expo-android-localized-app-name": "^1.0.1",
     "@testing-library/jest-native": "^5.4.3",
@@ -106,6 +107,9 @@
     "commitlint-plugin-function-rules": "^4.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "expo-build-properties": "^0.12.3",
