--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx src app test",
+    "lint": "bun lint:app && bun lint:i18n",
+    "lint:app": "eslint --ext .ts,.tsx,.js,.jsx src app",
+    "lint:i18n": "eslint --fix --ext .json --format node_modules/eslint-plugin-i18n-json/formatter.js assets/langs",
     "fix:deps": "expo install --fix",
     "build:web": "expo export --platform web",
     "test": "jest --runInBand",
@@ -35,15 +37,16 @@
     "@emotion/react": "^11.11.4",
     "@expo/match-media": "^0.4.0",
     "@expo/react-native-action-sheet": "^4.1.0",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "5.16.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@shopify/flash-list": "1.6.4",
+    "@shopify/flash-list": "^1.7.0",
     "@supabase/supabase-js": "^2.44.2",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
-    "dooboo-ui": "^0.2.33",
+    "dooboo-ui": "^0.2.34",
     "expo": "~51.0.17",
     "expo-apple-authentication": "^6.4.1",
     "expo-constants": "~16.0.2",
@@ -69,6 +72,7 @@
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.52.1",
     "react-native": "0.74.2",
     "react-native-error-boundary": "^1.2.4",
     "react-native-gesture-handler": "~2.16.2",
@@ -84,7 +88,9 @@
     "react-native-web": "~0.19.12",
     "react-native-web-lottie": "^1.4.4",
     "react-native-webview": "13.8.6",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "swr": "^2.2.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
@@ -92,7 +98,6 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@dooboo/eslint-config-react-native": "^1.4.3",
     "@emotion/babel-plugin": "^11.11.0",
     "@mmomtchev/expo-android-localized-app-name": "^1.0.1",
     "@testing-library/jest-native": "^5.4.3",
@@ -106,6 +111,9 @@
     "commitlint-plugin-function-rules": "^4.0.0",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "expo-build-properties": "^0.12.3",
