feat: update and delete post

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,6 +40,7 @@
     "crossplatformkorea",
     "CROSSPLATFORMS",
     "dooboo",
+    "hookform",
     "lotties",
     "Onesignal",
     "Pressable",
