--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "@supabase/supabase-js": "^2.44.2",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
-    "dooboo-ui": "^0.2.34",
+    "dooboo-ui": "^0.2.35",
     "expo": "~51.0.17",
     "expo-apple-authentication": "^6.4.1",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
+    "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.7",
     "expo-image": "~1.12.12",
     "expo-image-picker": "~15.0.6",
@@ -66,6 +67,7 @@
     "expo-system-ui": "~3.0.6",
     "expo-tracking-transparency": "~4.0.2",
     "expo-updates": "~0.25.18",
+    "expo-video-thumbnails": "^8.0.0",
     "expo-web-browser": "~13.0.3",
     "i18n-js": "^4.4.3",
     "lottie-react": "^2.4.0",
@@ -80,6 +82,7 @@
     "react-native-pager-view": "6.3.0",
     "react-native-parsed-text": "^0.0.22",
     "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
