feat: add picture page

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@expo/match-media": "^0.4.0",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@hookform/resolvers": "^3.9.0",
+    "@likashefqet/react-native-image-zoom": "^3.0.0",
     "@prisma/client": "5.16.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
@@ -76,6 +77,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.1",
     "react-native": "0.74.2",
+    "react-native-device-info": "^11.1.0",
     "react-native-error-boundary": "^1.2.4",
     "react-native-gesture-handler": "~2.16.2",
     "react-native-modal": "^13.0.1",
