--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "expo-font": "~12.0.7",
     "expo-image": "~1.12.12",
     "expo-image-picker": "~15.0.6",
-    "expo-linear-gradient": "~13.0.2",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-notifications": "~0.28.9",
