--- a/package.json
+++ b/package.json
@@ -44,31 +44,31 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@shopify/flash-list": "^1.7.0",
+    "@shopify/flash-list": "1.6.4",
     "@supabase/supabase-js": "^2.44.2",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
     "dooboo-ui": "^0.2.35",
-    "expo": "~51.0.17",
-    "expo-apple-authentication": "^6.4.1",
+    "expo": "~51.0.24",
+    "expo-apple-authentication": "~6.4.2",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
-    "expo-font": "~12.0.7",
-    "expo-image": "~1.12.12",
-    "expo-image-picker": "~15.0.6",
+    "expo-font": "~12.0.9",
+    "expo-image": "~1.12.13",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-notifications": "~0.28.9",
-    "expo-router": "~3.5.17",
+    "expo-notifications": "~0.28.15",
+    "expo-router": "~3.5.20",
     "expo-screen-orientation": "~7.0.5",
     "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
     "expo-tracking-transparency": "~4.0.2",
-    "expo-updates": "~0.25.18",
+    "expo-updates": "~0.25.21",
     "expo-video-thumbnails": "^8.0.0",
     "expo-web-browser": "~13.0.3",
     "i18n-js": "^4.4.3",
@@ -77,7 +77,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.1",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-device-info": "^11.1.0",
     "react-native-error-boundary": "^1.2.4",
     "react-native-gesture-handler": "~2.16.2",
@@ -86,9 +86,9 @@
     "react-native-parsed-text": "^0.0.22",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.5.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.12",
@@ -122,8 +122,8 @@
     "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "expo-build-properties": "^0.12.3",
-    "expo-dev-client": "^4.0.19",
+    "expo-build-properties": "~0.12.4",
+    "expo-dev-client": "~4.0.21",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "jest-fetch-mock": "^3.0.3",
