chore(deps): install react-native-google-mobile-ads

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-native-device-info": "^11.1.0",
     "react-native-error-boundary": "^1.2.4",
     "react-native-gesture-handler": "~2.16.2",
+    "react-native-google-mobile-ads": "^14.2.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.3.0",
     "react-native-parsed-text": "^0.0.22",
