--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "migrate:deploy": "dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
+    "@dooboo/react-native-youtube-iframe": "^2.2.5",
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@expo/match-media": "^0.4.0",
