fix(web): supabase error
https://stackoverflow.com/a/78704403

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@shopify/flash-list": "1.6.4",
-    "@supabase/supabase-js": "^2.44.2",
+    "@supabase/supabase-js": "^2.45.1",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
     "dooboo-ui": "^0.2.35",
@@ -94,6 +94,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.12",
     "react-native-web-lottie": "^1.4.4",
+    "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.8.6",
     "recoil": "^0.7.7",
     "swr": "^2.2.5",
