--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint:app": "eslint --ext .ts,.tsx,.js,.jsx src app",
     "lint:i18n": "eslint --fix --ext .json --format node_modules/eslint-plugin-i18n-json/formatter.js assets/langs",
     "fix:deps": "expo install --fix",
-    "build:web": "expo export --platform web",
+    "build:web:post": "cp assets/favicon.png dist/",
+    "build:web": "expo export --platform web && bun build:web:post",
     "test": "jest --runInBand",
     "eas:dev:updates": "dotenv -e .env -- eas update --branch development",
     "eas:preview:android": "dotenv -e .env.production -- eas build --profile preview --platform android",
