feat(wip): sponsors page

--- a/eas.json
+++ b/eas.json
@@ -23,6 +23,9 @@
       }
     },
     "production": {
+      "env": {
+        "ENVIRONMENT": "production"
+      },
       "channel": "production",
       "cache": {
         "disabled": true
