--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
+    "expo-iap": "^2.0.0-rc.2",
     "expo-image": "~1.12.13",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
