--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,17 +38,17 @@ jobs:
           sed -i '/<\/head>/i \
           <meta property="og:image" content="https://crossplatformkorea.com/img/hero.svg" />\n\
           <meta property="og:type" content="website" />\n\
-          <meta property="og:url" content="https://cpk.dooboolab.com" />\n\
+          <meta property="og:url" content="https://app.crossplatformkorea.com" />\n\
           <meta property="og:description" content="Cross-Platform Korea Community" />\n\
           <meta property="og:title" content="Cross-Platform Korea" />\n\
           <meta property="twitter:card" content="Cross-Platform Korea" />\n\
-          <meta property="twitter:url" content="https://cpk.dooboolab.com" />\n\
+          <meta property="twitter:url" content="https://app.crossplatformkorea.com" />\n\
           <meta property="twitter:title" content="Cross-Platform Korea" />\n\
           <meta property="twitter:description" content="Cross-Platform Korea Community" />\n' ./dist/index.html
 
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CROSSPLATFORMKOREA2024 }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CROSS_PLATFORM_KOREA_5032F }}'
           channelId: live
-          projectId: crossplatformkorea2024
+          projectId: cross-platform-korea-5032f
