--- a/.github/workflows/deploy-pr.yml
+++ b/.github/workflows/deploy-pr.yml
@@ -54,4 +54,4 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_CROSS_PLATFORM_KOREA_5032F }}'
           channelId: live
           projectId: cross-platform-korea-5032f
-          target: cpk-preview
+          target: staging
