--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "eas:dev:ios": "dotenv -e .env -- eas build --profile development --platform ios",
     "eas:dev:android": "dotenv -e .env -- eas build --profile development --platform android",
     "eas:prod:secrets": "eas secret:push --scope project --env-file .env.production",
-    "eas:prod:ios": "dotenv -e .env.production -- eas build --profile production --platform ios",
+    "eas:prod:ios": "eas build --profile production --platform ios",
     "eas:prod:android": "dotenv -e .env.production -- eas build --profile production --platform android",
-    "eas:prod:android:local": "dotenv -e .env.production -- eas build --profile production --platform android --local",
+    "eas:prod:android:local": "eas build --profile production --platform android --local",
     "eas:submit:ios": "dotenv -e .env.production -- eas submit --profile production --platform ios",
     "eas:submit:android": "dotenv -e .env.production -- eas submit --profile production --platform android",
     "generate:supabase": "bunx supabase gen types typescript --project-id \"dnwizkmicoxcnzlfeali\" --schema public > src/types/supabase.ts",
@@ -51,7 +51,7 @@
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
     "dooboo-ui": "^0.2.35",
-    "expo": "~51.0.26",
+    "expo": "~51.0.28",
     "expo-apple-authentication": "~6.4.2",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
@@ -64,7 +64,7 @@
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-notifications": "~0.28.15",
-    "expo-router": "~3.5.21",
+    "expo-router": "~3.5.23",
     "expo-screen-orientation": "~7.0.5",
     "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
@@ -127,7 +127,7 @@
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.22",
+    "expo-dev-client": "~4.0.23",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.3",
     "jest-fetch-mock": "^3.0.3",
