--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "build:web:post": "cp assets/favicon.png dist/",
     "build:web": "expo export --platform web && bun build:web:post",
     "test": "jest --runInBand",
+    "ios:release": "dotenv -e .env -- expo run:ios --configuration Release",
+    "android:release": "dotenv -e .env -- expo run:android --variant release",
+    "android:device:release": "STAGE=production react-native run-android --mode='release'",
     "eas:dev:updates": "dotenv -e .env -- eas update --branch development",
     "eas:preview:android": "dotenv -e .env.production -- eas build --profile preview --platform android",
     "eas:prod:updates": "dotenv -e .env.production -- eas update --branch production",
@@ -23,9 +26,9 @@
     "eas:dev:ios": "dotenv -e .env -- eas build --profile development --platform ios",
     "eas:dev:android": "dotenv -e .env -- eas build --profile development --platform android",
     "eas:prod:secrets": "eas secret:push --scope project --env-file .env.production",
-    "eas:prod:ios": "eas build --profile production --platform ios",
+    "eas:prod:ios": "dotenv -e .env.production -- eas build --profile production --platform ios",
     "eas:prod:android": "dotenv -e .env.production -- eas build --profile production --platform android",
-    "eas:prod:android:local": "eas build --profile production --platform android --local",
+    "eas:prod:android:local": "dotenv -e .env.production -- eas build --profile production --platform android --local",
     "eas:submit:ios": "dotenv -e .env.production -- eas submit --profile production --platform ios",
     "eas:submit:android": "dotenv -e .env.production -- eas submit --profile production --platform android",
     "generate:supabase": "bunx supabase gen types typescript --project-id \"dnwizkmicoxcnzlfeali\" --schema public > src/types/supabase.ts",
@@ -91,7 +94,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.5.0",
+    "react-native-svg": "15.2.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.12",
