--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "react-native-webview": "13.8.6",
     "recoil": "^0.7.7",
     "swr": "^2.2.5",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
