--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^3.6.0",
     "dooboo-ui": "^0.2.35",
-    "expo": "~51.0.28",
+    "expo": "~51.0.31",
     "expo-apple-authentication": "~6.4.2",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
     "expo-font": "~12.0.9",
-    "expo-image": "~1.12.14",
+    "expo-image": "~1.12.15",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
@@ -73,10 +73,11 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.23",
+    "expo-updates": "~0.25.24",
     "expo-video-thumbnails": "^8.0.0",
     "expo-web-browser": "~13.0.3",
     "i18n-js": "^4.4.3",
+    "immer": "^10.1.1",
     "lottie-react": "^2.4.0",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
@@ -100,7 +101,6 @@
     "react-native-web-lottie": "^1.4.4",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "13.8.6",
-    "recoil": "^0.7.7",
     "swr": "^2.2.5",
     "yup": "^1.4.0",
     "zustand": "^4.5.5"
@@ -130,7 +130,7 @@
     "eslint-plugin-jest": "^28.6.0",
     "eslint-plugin-prettier": "^5.1.3",
     "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.23",
+    "expo-dev-client": "~4.0.25",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
     "jest-fetch-mock": "^3.0.3",
