feat: migrate auth to clerk

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,5 @@
 DATABASE_URL=
 supabaseUrl=
 supabaseAnonKey=
-googleClientIdAndroid=
-googleClientIdIOS=
-googleClientIdWeb=
 expoProjectId=
+EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
