--- a/package.json
+++ b/package.json
@@ -38,30 +38,29 @@
     "migrate:deploy": "dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "2.2.10",
     "@dooboo/react-native-youtube-iframe": "^2.2.5",
     "@emotion/native": "^11.11.0",
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.13.3",
     "@expo/match-media": "^0.4.0",
+    "@expo/metro-runtime": "~3.2.3",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@hookform/resolvers": "^3.9.0",
-    "@likashefqet/react-native-image-zoom": "^3.0.0",
+    "@likashefqet/react-native-image-zoom": "^4.1.0",
     "@prisma/client": "5.16.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
-    "@react-native-google-signin/google-signin": "^12.2.1",
     "@shopify/flash-list": "1.6.4",
     "@supabase/supabase-js": "^2.45.1",
     "base64-arraybuffer": "^1.0.2",
-    "date-fns": "^3.6.0",
-    "dooboo-ui": "^0.2.35",
+    "date-fns": "^4.0.0",
+    "dooboo-ui": "^0.2.37",
     "expo": "~51.0.28",
-    "expo-apple-authentication": "~6.4.2",
-    "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
-    "expo-font": "~12.0.9",
-    "expo-image": "~1.12.14",
+    "expo-font": "~12.0.10",
+    "expo-image": "~1.12.15",
     "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
@@ -69,11 +68,12 @@
     "expo-notifications": "~0.28.16",
     "expo-router": "~3.5.23",
     "expo-screen-orientation": "~7.0.5",
+    "expo-secure-store": "~13.0.2",
     "expo-sharing": "~12.0.1",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.23",
+    "expo-updates": "~0.25.24",
     "expo-video-thumbnails": "^8.0.0",
     "expo-web-browser": "~13.0.3",
     "i18n-js": "^4.4.3",
@@ -81,11 +81,11 @@
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.52.1",
+    "react-hook-form": "^7.53.0",
     "react-native": "0.74.5",
-    "react-native-device-info": "^11.1.0",
+    "react-native-device-info": "^13.0.0",
     "react-native-error-boundary": "^1.2.4",
-    "react-native-gesture-handler": "~2.16.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.3.0",
     "react-native-parsed-text": "^0.0.22",
@@ -108,17 +108,17 @@
     "@babel/core": "^7.24.7",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
-    "@emotion/babel-plugin": "^11.11.0",
+    "@commitlint/cli": "^19.5.0",
+    "@commitlint/config-conventional": "^19.5.0",
+    "@emotion/babel-plugin": "^11.12.0",
     "@mmomtchev/expo-android-localized-app-name": "^1.0.1",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.5.1",
-    "@types/jest": "^29.5.12",
+    "@testing-library/react-native": "^12.7.2",
+    "@types/jest": "^29.5.13",
     "@types/react": "~18.2.79",
     "@types/recoil": "^0.0.9",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "ajv": "^8.16.0",
+    "ajv": "^8.17.1",
     "babel-jest": "^29.7.0",
     "commitlint-plugin-function-rules": "^4.0.0",
     "dotenv-cli": "^7.4.2",
@@ -126,17 +126,17 @@
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-i18n-json": "^4.0.0",
-    "eslint-plugin-jest": "^28.6.0",
-    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-prettier": "^5.2.1",
     "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.23",
+    "expo-dev-client": "~4.0.26",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
     "jest-fetch-mock": "^3.0.3",
-    "prettier": "^3.3.2",
+    "prettier": "^3.3.3",
     "prisma": "^5.16.1",
-    "react-test-renderer": "18.2.0",
-    "ts-jest": "^29.1.4",
+    "react-test-renderer": "18.3.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3"
   },
