--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cpk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -54,8 +54,8 @@
     "@supabase/supabase-js": "^2.45.1",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.0.0",
-    "dooboo-ui": "^0.2.37",
-    "expo": "~51.0.28",
+    "dooboo-ui": "^0.2.38",
+    "expo": "~51.0.31",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
@@ -65,7 +65,7 @@
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-notifications": "~0.28.16",
+    "expo-notifications": "~0.28.17",
     "expo-router": "~3.5.23",
     "expo-screen-orientation": "~7.0.5",
     "expo-secure-store": "~13.0.2",
@@ -82,17 +82,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
-    "react-native": "0.74.5",
+    "react-native": "~0.75.0",
     "react-native-device-info": "^13.0.0",
     "react-native-error-boundary": "^1.2.4",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.18.1",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "6.3.0",
     "react-native-parsed-text": "^0.0.22",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~3.15.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "~3.34.0",
     "react-native-svg": "15.5.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-url-polyfill": "^2.0.0",
@@ -141,5 +140,15 @@
     "typescript": "~5.3.3"
   },
   "private": true,
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native@~0.74.0",
+        "react-native-reanimated@~3.10.0",
+        "react-native-gesture-handler@~2.16.1",
+        "react-native-screens@~3.31.1"
+      ]
+    }
+  }
 }
