--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 DATABASE_URL=
-supabaseUrl=
-supabaseAnonKey=
 expoProjectId=
+EXPO_PUBLIC_SUPABASE_URL=
+EXPO_PUBLIC_SUPABASE_ANON_KEY=
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
