--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "start:prod": "STAGE=prod expo start",
+    "start:prod": "dotenv -e .env.production -- expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -17,7 +17,7 @@
     "test": "jest --runInBand",
     "ios:release": "dotenv -e .env -- expo run:ios --configuration Release",
     "android:release": "dotenv -e .env -- expo run:android --variant release",
-    "android:device:release": "STAGE=production react-native run-android --mode='release'",
+    "android:device:release": "dotenv -e .env.production -- react-native run-android --mode='release'",
     "eas:dev:updates": "dotenv -e .env -- eas update --branch development",
     "eas:preview:android": "dotenv -e .env.production -- eas build --profile preview --platform android",
     "eas:prod:updates": "dotenv -e .env.production -- eas update --branch production",
