--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "migrate:deploy": "dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "2.2.17",
+    "@clerk/clerk-expo": "^2.2.29",
     "@dooboo/react-native-youtube-iframe": "^2.2.5",
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.13.3",
