--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Build web
         run: bun build:web
         env:
-          supabaseUrl: ${{ secrets.EXPO_PUBLIC_SUPABSE_URL }}
-          supabaseAnonKey: ${{ secrets.EXPO_PUBLIC_SUPABSE_ANON_KEY }}
+          EXPO_PUBLIC_SUPABASE_URL: ${{ secrets.EXPO_PUBLIC_SUPABASE_URL }}
+          EXPO_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.EXPO_PUBLIC_SUPABASE_ANON_KEY }}
           EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY: ${{ secrets.EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY }}
           expoProjectId: ${{ secrets.expoProjectId }}
 
