--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "web:prod": "dotenv -e .env.production -- expo start --web",
     "lint": "bun lint:app && bun lint:i18n",
     "lint:app": "eslint --ext .ts,.tsx,.js,.jsx src app",
     "lint:i18n": "eslint --fix --ext .json --format node_modules/eslint-plugin-i18n-json/formatter.js assets/langs",
@@ -38,24 +39,24 @@
     "migrate:deploy": "dotenv -e .env.production -- prisma migrate deploy"
   },
   "dependencies": {
-    "@clerk/clerk-expo": "^2.2.29",
+    "@clerk/clerk-expo": "^2.2.36",
     "@dooboo/react-native-youtube-iframe": "^2.2.5",
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.13.3",
     "@expo/match-media": "^0.4.0",
     "@expo/metro-runtime": "~3.2.3",
     "@expo/react-native-action-sheet": "^4.1.0",
-    "@hookform/resolvers": "^3.9.0",
-    "@likashefqet/react-native-image-zoom": "^4.1.0",
-    "@prisma/client": "5.20.0",
-    "@react-native-async-storage/async-storage": "2.0.0",
-    "@react-native-community/datetimepicker": "8.2.0",
-    "@shopify/flash-list": "1.7.1",
-    "@supabase/supabase-js": "^2.45.4",
+    "@hookform/resolvers": "^3.9.1",
+    "@likashefqet/react-native-image-zoom": "^4.2.0",
+    "@prisma/client": "5.22.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@shopify/flash-list": "1.6.4",
+    "@supabase/supabase-js": "^2.46.1",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
-    "dooboo-ui": "^0.2.38",
-    "expo": "~51.0.34",
+    "dooboo-ui": "^0.2.40",
+    "expo": "~51.0.38",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-file-system": "^17.0.1",
@@ -65,7 +66,7 @@
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-notifications": "~0.28.17",
+    "expo-notifications": "~0.28.19",
     "expo-router": "~3.5.23",
     "expo-screen-orientation": "~7.0.5",
     "expo-secure-store": "~13.0.2",
@@ -73,27 +74,27 @@
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.25",
+    "expo-updates": "~0.25.27",
     "expo-video-thumbnails": "^8.0.0",
     "expo-web-browser": "~13.0.3",
-    "i18n-js": "^4.4.3",
+    "i18n-js": "^4.5.0",
     "lottie-react": "^2.4.0",
     "lottie-react-native": "7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.53.1",
     "react-native": "~0.75.3",
-    "react-native-device-info": "^13.0.0",
-    "react-native-error-boundary": "^1.2.4",
-    "react-native-gesture-handler": "~2.20.0",
+    "react-native-device-info": "^14.0.0",
+    "react-native-error-boundary": "^1.2.5",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
     "react-native-parsed-text": "^0.0.22",
-    "react-native-reanimated": "~3.15.3",
+    "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.11.0",
-    "react-native-screens": "~3.34.0",
+    "react-native-screens": "~4.0.0",
     "react-native-svg": "15.7.1",
-    "react-native-tab-view": "^3.5.2",
+    "react-native-tab-view": "^4.0.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.12",
     "react-native-web-lottie": "^1.4.4",
@@ -104,35 +105,36 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@emotion/babel-plugin": "^11.12.0",
     "@mmomtchev/expo-android-localized-app-name": "^1.0.1",
+    "@react-native-community/cli-server-api": "^15.1.1",
     "@testing-library/jest-native": "^5.4.3",
-    "@testing-library/react-native": "^12.7.2",
-    "@types/jest": "^29.5.13",
-    "@types/react": "~18.3.10",
+    "@testing-library/react-native": "^12.8.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~18.2.79",
     "@types/recoil": "^0.0.9",
     "ajv": "^8.17.1",
     "babel-jest": "^29.7.0",
-    "commitlint-plugin-function-rules": "^4.0.0",
+    "commitlint-plugin-function-rules": "^4.0.1",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.1.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-i18n-json": "^4.0.0",
-    "eslint-plugin-jest": "^28.8.3",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
     "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.27",
+    "expo-dev-client": "~4.0.29",
     "jest": "^29.7.0",
     "jest-expo": "~51.0.4",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.3",
-    "prisma": "^5.20.0",
+    "prisma": "^5.22.0",
     "react-test-renderer": "18.3.1",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
