--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cpk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
@@ -44,46 +44,46 @@
     "@emotion/native": "^11.11.0",
     "@emotion/react": "^11.13.3",
     "@expo/match-media": "^0.4.0",
-    "@expo/metro-runtime": "~3.2.3",
+    "@expo/metro-runtime": "~4.0.0",
     "@expo/react-native-action-sheet": "^4.1.0",
     "@hookform/resolvers": "^3.9.1",
     "@likashefqet/react-native-image-zoom": "^4.2.0",
     "@prisma/client": "5.22.0",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.0.1",
-    "@shopify/flash-list": "1.6.4",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@shopify/flash-list": "1.7.1",
     "@supabase/supabase-js": "^2.46.1",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "dooboo-ui": "^0.2.40",
-    "expo": "~51.0.38",
-    "expo-constants": "~16.0.2",
-    "expo-device": "~6.0.2",
-    "expo-file-system": "^17.0.1",
-    "expo-font": "~12.0.10",
-    "expo-image": "~1.13.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-notifications": "~0.28.19",
-    "expo-router": "~3.5.23",
-    "expo-screen-orientation": "~7.0.5",
-    "expo-secure-store": "~13.0.2",
-    "expo-sharing": "~12.0.1",
-    "expo-splash-screen": "~0.27.6",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-updates": "~0.25.27",
-    "expo-video-thumbnails": "^8.0.0",
-    "expo-web-browser": "~13.0.3",
+    "expo": "^52.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
+    "expo-file-system": "~18.0.3",
+    "expo-font": "~13.0.1",
+    "expo-image": "~2.0.0",
+    "expo-image-picker": "~16.0.2",
+    "expo-linear-gradient": "~14.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-localization": "~16.0.0",
+    "expo-notifications": "~0.29.8",
+    "expo-router": "~4.0.5",
+    "expo-screen-orientation": "~8.0.0",
+    "expo-secure-store": "~14.0.0",
+    "expo-sharing": "~13.0.0",
+    "expo-splash-screen": "~0.29.10",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.3",
+    "expo-updates": "~0.26.7",
+    "expo-video-thumbnails": "~9.0.2",
+    "expo-web-browser": "~14.0.1",
     "i18n-js": "^4.5.0",
     "lottie-react": "^2.4.0",
     "lottie-react-native": "7.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
-    "react-native": "~0.75.3",
+    "react-native": "0.76.2",
     "react-native-device-info": "^14.0.0",
     "react-native-error-boundary": "^1.2.5",
     "react-native-gesture-handler": "~2.20.2",
@@ -91,9 +91,9 @@
     "react-native-parsed-text": "^0.0.22",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.11.0",
-    "react-native-screens": "~4.0.0",
-    "react-native-svg": "15.7.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "^4.0.0",
+    "react-native-svg": "15.8.0",
     "react-native-tab-view": "^4.0.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.12",
@@ -116,22 +116,22 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^12.8.1",
     "@types/jest": "^29.5.14",
-    "@types/react": "~18.2.79",
+    "@types/react": "~18.3.12",
     "@types/recoil": "^0.0.9",
     "ajv": "^8.17.1",
     "babel-jest": "^29.7.0",
     "commitlint-plugin-function-rules": "^4.0.1",
     "dotenv-cli": "^7.4.2",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "^7.1.2",
+    "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-i18n-json": "^4.0.0",
     "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "expo-build-properties": "~0.12.5",
-    "expo-dev-client": "~4.0.29",
+    "expo-build-properties": "~0.13.1",
+    "expo-dev-client": "~5.0.1",
     "jest": "^29.7.0",
-    "jest-expo": "~51.0.4",
+    "jest-expo": "~52.0.1",
     "jest-fetch-mock": "^3.0.3",
     "prettier": "^3.3.3",
     "prisma": "^5.22.0",
@@ -141,15 +141,5 @@
     "typescript": "~5.3.3"
   },
   "private": true,
-  "license": "UNLICENSED",
-  "expo": {
-    "install": {
-      "exclude": [
-        "react-native@~0.74.0",
-        "react-native-reanimated@~3.10.0",
-        "react-native-gesture-handler@~2.16.1",
-        "react-native-screens@~3.31.1"
-      ]
-    }
-  }
+  "license": "UNLICENSED"
 }
