refactor: migrate to cpk-ui (#17)
https://github.com/crossplatformkorea/CPK-UI

--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "@shopify/flash-list": "1.7.1",
     "@supabase/supabase-js": "^2.46.1",
     "base64-arraybuffer": "^1.0.2",
+    "cpk-ui": "^0.1.0",
     "date-fns": "^4.1.0",
-    "dooboo-ui": "^0.2.40",
     "expo": "~52.0.11",
     "expo-constants": "~17.0.3",
     "expo-device": "~7.0.1",
