feat: notify slack channel on post

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
 DATABASE_URL=
 expoProjectId=
+SLACK_WEBHOOK_URL=
 EXPO_PUBLIC_SUPABASE_URL=
 EXPO_PUBLIC_SUPABASE_ANON_KEY=
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=
+GOOGLE_SERVICES_IOS=./GoogleService-Info.plist
+GOOGLE_SERVICES_ANDROID=./google-services.json
